[package]
name = "nemu-rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["difftest"]
#default = ["difftest", "log_inst"]
difftest = []
log_inst = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4"
simplelog = "^0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
rustyline = "13.0.0"
strum = "0.26.1"
strum_macros = "0.26.1"
chumsky = "0.9.3"
cfg-if = "1.0"
sdl2 = { version = "0.36", features = ["unsafe_textures"] }
bitfield-struct = "0.10.0"
chrono = "0.4.38"
ringbuf = "0.4.7"
tokio = { version = "1.43.0", features = ["rt", "net", "sync", "io-util", "macros"] }
ctrlc = "3.4.5"
nohash-hasher = "0.2.0"

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"
